[package]
name = "prometheus-parse"
description = "A simple parser for the Prometheus text format"
version = "0.3.0"
authors = [
    "Casey Marshall <authmerge@cmars.tech>",
    "Cameron Daniel <cam.daniel@gmail.com>",
    "Joe Hrbek <joe@mystenlabs.com>"
    ]
edition = "2021"
readme = "README.md"
license = "Apache-2.0"
keywords = ["prometheus", "parser", "exposition"]
repository = "https://github.com/suiwombat/prometheus-parse-rs"
homepage = "https://github.com/suiwombat/prometheus-parse-rs"

[dependencies]
chrono =  { version = "0.4", default-features = false, features = ["clock", "std"] }
itertools = "0.10"
lazy_static = "1.4"
regex = "1.7"
